# c-Practice

./: AppRunner.cpp  CMakeLists.txt  Example1.cpp  Example1.h  Example2.cpp  Example2.h  practice.cpp
EasyTask/: Calculator.h  EasyTask1.h  EvenOdd.h  LargestNumber.h  StringReverse.h
Medium Task/: Account.h  ArrayOperations.h  Person.h  StringPalindrome.h  VectorOperations.h
